[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runtools-runner"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
#    "runtools-runcore @ git+ssh://git@github.com/runtools/runcore",
    "portalocker>=2.6.0",
    "pygrok>=1.0.0",
    "urllib3>=1.26.2",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.flit.module]
name = "runtools.runner"

[tool.pytest.ini_options]
pythonpath = "src"

[project.urls]
Home = "https://github.com/runtoolsio/runjob"
