[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runtoolsio-runjob"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.12"
dynamic = ["version", "description"]
dependencies = [
    "runtoolsio-runcore>=0.1,<0.2",
    "portalocker>=2.6.0",
    "pygrok>=1.0.0",
    "urllib3>=1.26.2",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.flit.module]
name = "runtools.runjob"

[tool.pytest.ini_options]
pythonpath = "src"

[project.urls]
Home = "https://github.com/runtoolsio/runjob"
